--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
     "superagent": "^3.8.2"
   },
   "devDependencies": {
